--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-click==8.1.3
-colorama==0.4.6
-Flask==2.2.2
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.2
-greenlet==2.0.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-SQLAlchemy==1.4.46
-Werkzeug==2.2.2
+Flask==1.1.4
+Werkzeug==0.16.1
+python-dotenv==0.17.1
+click==7.1.2
+Flask-SQLAlchemy==2.5.1
+Flask-Login==0.5.0
+Flask-Migrate==3.0.0
+WTForms==2.3.3
+Flask-WTF==0.15.1
+email-validator==1.1.2
+Flask-Admin==1.5.8
+Flask-COMBO-JSONAPI==1.0.7
+ComboJSONAPI==1.1.1
+apispec==4.7.1
+PyYAML==5.4.1
+requests==2.26.0
+markupsafe==2.0.1
