--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
-Flask==1.1.4
-Werkzeug==0.16.1
-python-dotenv==0.17.1
+alembic==1.9.2
+apispec==4.7.1
+bcrypt==4.0.1
+certifi==2022.12.7
+charset-normalizer==2.0.12
 click==7.1.2
-Flask-SQLAlchemy==2.5.1
+ComboJSONAPI==1.1.1
+dnspython==2.3.0
+email-validator==1.1.2
+Flask==1.1.4
+Flask-Admin==1.5.8
+Flask-Bcrypt==1.0.1
+Flask-COMBO-JSONAPI==1.0.7
 Flask-Login==0.5.0
 Flask-Migrate==3.0.0
-WTForms==2.3.3
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
-email-validator==1.1.2
-Flask-Admin==1.5.8
-Flask-COMBO-JSONAPI==1.0.7
-ComboJSONAPI==1.1.1
-apispec==4.7.1
+idna==3.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+Mako==1.2.4
+MarkupSafe==2.0.1
+marshmallow==3.2.1
+marshmallow-jsonapi==0.24.0
+python-dotenv==0.17.1
 PyYAML==5.4.1
 requests==2.26.0
-markupsafe==2.0.1
+simplejson==3.18.1
+SQLAlchemy==1.3.24
+urllib3==1.26.14
+Werkzeug==0.16.1
+WTForms==2.3.3
