--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Login==0.5.0
 Flask-Migrate==3.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==2.0.2
 idna==3.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -22,11 +23,13 @@ Mako==1.2.4
 MarkupSafe==2.0.1
 marshmallow==3.2.1
 marshmallow-jsonapi==0.24.0
+packaging==23.0
 python-dotenv==0.17.1
 PyYAML==5.4.1
 requests==2.26.0
 simplejson==3.18.1
 SQLAlchemy==1.3.24
+typing_extensions==4.4.0
 urllib3==1.26.14
 Werkzeug==0.16.1
 WTForms==2.3.3
